// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeliveryStartDate renders with a custom date 1`] = `
<label id="deliveryStartDateField"
       class="o-forms-field"
       data-validate="required"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      Delivery start date
    </span>
    <span class="o-forms-title__prompt">
      Earliest available delivery date: 5th November 2019
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text">
    <input type="date"
           id="deliveryStartDate"
           name="deliveryStartDate"
           data-trackable="field-deliveryStartDate"
           aria-required="true"
           required
           value
    >
  </span>
  <span class="o-forms-input__error">
    Please select a valid start date
  </span>
  <p>
    Your print subscription will start from:
    <strong class="js-start-date-text">
      5th November 2019
    </strong>
  </p>
  <p>
    NB. This will  be the closest date we can supply your newspaper based on your selected date e.g. if you select a Sunday then we can start your supply on the Monday.
  </p>
</label>
`;

exports[`DeliveryStartDate renders with a custom date 2`] = `
<label id="deliveryStartDateField"
       class="o-forms-field"
       data-validate="required"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      Delivery start date
    </span>
    <span class="o-forms-title__prompt">
      Earliest available delivery date: 5th November 2019
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text">
    <input type="date"
           id="deliveryStartDate"
           name="deliveryStartDate"
           data-trackable="field-deliveryStartDate"
           aria-required="true"
           required
           value
    >
  </span>
  <span class="o-forms-input__error">
    Please select a valid start date
  </span>
  <p>
    Your print subscription will start from:
    <strong class="js-start-date-text">
      5th November 2019
    </strong>
  </p>
  <p>
    NB. This will  be the closest date we can supply your newspaper based on your selected date e.g. if you select a Sunday then we can start your supply on the Monday.
  </p>
</label>
`;

exports[`DeliveryStartDate renders with a custom input max value 1`] = `
<label id="deliveryStartDateField"
       class="o-forms-field"
       data-validate="required"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      Delivery start date
    </span>
    <span class="o-forms-title__prompt">
      Earliest available delivery date: 2
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text">
    <input type="date"
           id="deliveryStartDate"
           name="deliveryStartDate"
           data-trackable="field-deliveryStartDate"
           aria-required="true"
           required
           value
    >
  </span>
  <span class="o-forms-input__error">
    Please select a valid start date
  </span>
  <p>
    Your print subscription will start from:
    <strong class="js-start-date-text">
      2
    </strong>
  </p>
  <p>
    NB. This will  be the closest date we can supply your newspaper based on your selected date e.g. if you select a Sunday then we can start your supply on the Monday.
  </p>
</label>
`;

exports[`DeliveryStartDate renders with a custom input max value 2`] = `
<label id="deliveryStartDateField"
       class="o-forms-field"
       data-validate="required"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      Delivery start date
    </span>
    <span class="o-forms-title__prompt">
      Earliest available delivery date: 2
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text">
    <input type="date"
           id="deliveryStartDate"
           name="deliveryStartDate"
           data-trackable="field-deliveryStartDate"
           aria-required="true"
           required
           value
    >
  </span>
  <span class="o-forms-input__error">
    Please select a valid start date
  </span>
  <p>
    Your print subscription will start from:
    <strong class="js-start-date-text">
      2
    </strong>
  </p>
  <p>
    NB. This will  be the closest date we can supply your newspaper based on your selected date e.g. if you select a Sunday then we can start your supply on the Monday.
  </p>
</label>
`;

exports[`DeliveryStartDate renders with a custom input min value 1`] = `
<label id="deliveryStartDateField"
       class="o-forms-field"
       data-validate="required"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      Delivery start date
    </span>
    <span class="o-forms-title__prompt">
      Earliest available delivery date:
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text">
    <input type="date"
           id="deliveryStartDate"
           name="deliveryStartDate"
           min="1"
           data-trackable="field-deliveryStartDate"
           aria-required="true"
           required
           value
    >
  </span>
  <span class="o-forms-input__error">
    Please select a valid start date
  </span>
  <p>
    Your print subscription will start from:
    <strong class="js-start-date-text">
    </strong>
  </p>
  <p>
    NB. This will  be the closest date we can supply your newspaper based on your selected date e.g. if you select a Sunday then we can start your supply on the Monday.
  </p>
</label>
`;

exports[`DeliveryStartDate renders with a custom input min value 2`] = `
<label id="deliveryStartDateField"
       class="o-forms-field"
       data-validate="required"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      Delivery start date
    </span>
    <span class="o-forms-title__prompt">
      Earliest available delivery date:
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text">
    <input type="date"
           id="deliveryStartDate"
           name="deliveryStartDate"
           min="1"
           data-trackable="field-deliveryStartDate"
           aria-required="true"
           required
           value
    >
  </span>
  <span class="o-forms-input__error">
    Please select a valid start date
  </span>
  <p>
    Your print subscription will start from:
    <strong class="js-start-date-text">
    </strong>
  </p>
  <p>
    NB. This will  be the closest date we can supply your newspaper based on your selected date e.g. if you select a Sunday then we can start your supply on the Monday.
  </p>
</label>
`;

exports[`DeliveryStartDate renders with a custom input value 1`] = `
<label id="deliveryStartDateField"
       class="o-forms-field"
       data-validate="required"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      Delivery start date
    </span>
    <span class="o-forms-title__prompt">
      Earliest available delivery date:
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text">
    <input type="date"
           id="deliveryStartDate"
           name="deliveryStartDate"
           data-trackable="field-deliveryStartDate"
           aria-required="true"
           required
           value="Foobar"
    >
  </span>
  <span class="o-forms-input__error">
    Please select a valid start date
  </span>
  <p>
    Your print subscription will start from:
    <strong class="js-start-date-text">
    </strong>
  </p>
  <p>
    NB. This will  be the closest date we can supply your newspaper based on your selected date e.g. if you select a Sunday then we can start your supply on the Monday.
  </p>
</label>
`;

exports[`DeliveryStartDate renders with a custom input value 2`] = `
<label id="deliveryStartDateField"
       class="o-forms-field"
       data-validate="required"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      Delivery start date
    </span>
    <span class="o-forms-title__prompt">
      Earliest available delivery date:
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text">
    <input type="date"
           id="deliveryStartDate"
           name="deliveryStartDate"
           data-trackable="field-deliveryStartDate"
           aria-required="true"
           required
           value="Foobar"
    >
  </span>
  <span class="o-forms-input__error">
    Please select a valid start date
  </span>
  <p>
    Your print subscription will start from:
    <strong class="js-start-date-text">
    </strong>
  </p>
  <p>
    NB. This will  be the closest date we can supply your newspaper based on your selected date e.g. if you select a Sunday then we can start your supply on the Monday.
  </p>
</label>
`;

exports[`DeliveryStartDate renders with a disabled input 1`] = `
<label id="deliveryStartDateField"
       class="o-forms-field"
       data-validate="required"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      Delivery start date
    </span>
    <span class="o-forms-title__prompt">
      Earliest available delivery date:
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text">
    <input type="date"
           id="deliveryStartDate"
           name="deliveryStartDate"
           data-trackable="field-deliveryStartDate"
           aria-required="true"
           required
           disabled
           value
    >
  </span>
  <span class="o-forms-input__error">
    Please select a valid start date
  </span>
  <p>
    Your print subscription will start from:
    <strong class="js-start-date-text">
    </strong>
  </p>
  <p>
    NB. This will  be the closest date we can supply your newspaper based on your selected date e.g. if you select a Sunday then we can start your supply on the Monday.
  </p>
</label>
`;

exports[`DeliveryStartDate renders with a disabled input 2`] = `
<label id="deliveryStartDateField"
       class="o-forms-field"
       data-validate="required"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      Delivery start date
    </span>
    <span class="o-forms-title__prompt">
      Earliest available delivery date:
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text">
    <input type="date"
           id="deliveryStartDate"
           name="deliveryStartDate"
           data-trackable="field-deliveryStartDate"
           aria-required="true"
           required
           disabled
           value
    >
  </span>
  <span class="o-forms-input__error">
    Please select a valid start date
  </span>
  <p>
    Your print subscription will start from:
    <strong class="js-start-date-text">
    </strong>
  </p>
  <p>
    NB. This will  be the closest date we can supply your newspaper based on your selected date e.g. if you select a Sunday then we can start your supply on the Monday.
  </p>
</label>
`;

exports[`DeliveryStartDate renders with an error 1`] = `
<label id="deliveryStartDateField"
       class="o-forms-field"
       data-validate="required"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      Delivery start date
    </span>
    <span class="o-forms-title__prompt">
      Earliest available delivery date:
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text o-forms-input--invalid">
    <input type="date"
           id="deliveryStartDate"
           name="deliveryStartDate"
           data-trackable="field-deliveryStartDate"
           aria-required="true"
           required
           value
    >
  </span>
  <span class="o-forms-input__error">
    Please select a valid start date
  </span>
  <p>
    Your print subscription will start from:
    <strong class="js-start-date-text">
    </strong>
  </p>
  <p>
    NB. This will  be the closest date we can supply your newspaper based on your selected date e.g. if you select a Sunday then we can start your supply on the Monday.
  </p>
</label>
`;

exports[`DeliveryStartDate renders with an error 2`] = `
<label id="deliveryStartDateField"
       class="o-forms-field"
       data-validate="required"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      Delivery start date
    </span>
    <span class="o-forms-title__prompt">
      Earliest available delivery date:
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text o-forms-input--invalid">
    <input type="date"
           id="deliveryStartDate"
           name="deliveryStartDate"
           data-trackable="field-deliveryStartDate"
           aria-required="true"
           required
           value
    >
  </span>
  <span class="o-forms-input__error">
    Please select a valid start date
  </span>
  <p>
    Your print subscription will start from:
    <strong class="js-start-date-text">
    </strong>
  </p>
  <p>
    NB. This will  be the closest date we can supply your newspaper based on your selected date e.g. if you select a Sunday then we can start your supply on the Monday.
  </p>
</label>
`;

exports[`DeliveryStartDate renders with default props 1`] = `
<label id="deliveryStartDateField"
       class="o-forms-field"
       data-validate="required"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      Delivery start date
    </span>
    <span class="o-forms-title__prompt">
      Earliest available delivery date:
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text">
    <input type="date"
           id="deliveryStartDate"
           name="deliveryStartDate"
           data-trackable="field-deliveryStartDate"
           aria-required="true"
           required
           value
    >
  </span>
  <span class="o-forms-input__error">
    Please select a valid start date
  </span>
  <p>
    Your print subscription will start from:
    <strong class="js-start-date-text">
    </strong>
  </p>
  <p>
    NB. This will  be the closest date we can supply your newspaper based on your selected date e.g. if you select a Sunday then we can start your supply on the Monday.
  </p>
</label>
`;

exports[`DeliveryStartDate renders with default props 2`] = `
<label id="deliveryStartDateField"
       class="o-forms-field"
       data-validate="required"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      Delivery start date
    </span>
    <span class="o-forms-title__prompt">
      Earliest available delivery date:
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text">
    <input type="date"
           id="deliveryStartDate"
           name="deliveryStartDate"
           data-trackable="field-deliveryStartDate"
           aria-required="true"
           required
           value
    >
  </span>
  <span class="o-forms-input__error">
    Please select a valid start date
  </span>
  <p>
    Your print subscription will start from:
    <strong class="js-start-date-text">
    </strong>
  </p>
  <p>
    NB. This will  be the closest date we can supply your newspaper based on your selected date e.g. if you select a Sunday then we can start your supply on the Monday.
  </p>
</label>
`;
